--- a/main.html
+++ b/main.html
@@ -30,9 +30,9 @@
         <h1>Orr BenZion</h1>
     </div>
     <footer>
-        <a id="facebook" href="https://www.facebook.com/orrbz"></a>
-        <a id="linkedin" href="https://www.linkedin.com/in/orr-ben-zion-31533310a/"></a>
-        <a id="gmail" href="mailto:benzix2@gmail.com"></a>
+        <a id="facebook" href="https://www.facebook.com/orrbz" target="_blank"></a>
+        <a id="linkedin" href="https://www.linkedin.com/in/orr-ben-zion-31533310a/" target="_blank"></a>
+        <a id="gmail" href="mailto:benzix2@gmail.com" target="_blank"></a>
     </footer>
 </body>
 </html>
