--- a/employment.html
+++ b/employment.html
@@ -30,15 +30,15 @@
             <figure id="emp"></figure>
             <h1>Employment</h1>
             <p>
-                Technical Support / Content Management at <a class="link" href="http://www.comigo.com/">Comigo LTD.</a><br />
+                Technical Support / Content Management at <a class="link" href="http://www.comigo.com/" target="_blank">Comigo LTD.</a><br />
                 And Part Time Graphic Designer
             </p>
         </article>
     </div>
     <footer>
-        <a id="facebook" href="https://www.facebook.com/orrbz"></a>
-        <a id="linkedin" href="https://www.linkedin.com/in/orr-ben-zion-31533310a/"></a>
-        <a id="gmail" href="mailto:benzix2@gmail.com"></a>
+        <a id="facebook" href="https://www.facebook.com/orrbz" target="_blank"></a>
+        <a id="linkedin" href="https://www.linkedin.com/in/orr-ben-zion-31533310a/" target="_blank"></a>
+        <a id="gmail" href="mailto:benzix2@gmail.com" target="_blank"></a>
     </footer>
 </body>
 </html>
