--- a/education.html
+++ b/education.html
@@ -29,13 +29,13 @@
         <article>
             <figure id="edu"></figure>
             <h1>Education</h1>
-            <p>Instructional Technologies Student at <a class="link" href="http://www.hit.ac.il/telem/overview">H.I.T</a></p>
+            <p>Instructional Technologies Student at <a class="link" href="http://www.hit.ac.il/telem/overview" target="_blank">H.I.T</a></p>
         </article>
     </div>
     <footer>
-        <a id="facebook" href="https://www.facebook.com/orrbz"></a>
-        <a id="linkedin" href="https://www.linkedin.com/in/orr-ben-zion-31533310a/"></a>
-        <a id="gmail" href="mailto:benzix2@gmail.com"></a>
+        <a id="facebook" href="https://www.facebook.com/orrbz" target="_blank"></a>
+        <a id="linkedin" href="https://www.linkedin.com/in/orr-ben-zion-31533310a/" target="_blank"></a>
+        <a id="gmail" href="mailto:benzix2@gmail.com" target="_blank"></a>
     </footer>
 </body>
 </html>
